Update appsettings.json latest

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "RegistrationdbConnection": "Server=tcp:resumebuilderbackenddbserver.database.windows.net,1433;Initial Catalog=ResumeBuilderBackend_db;Encrypt=True;TrustServerCertificate=False; User ID=adminuser; Password=Admin@12345; MultipleActiveResultSets=False; Encrypt=True;TrustServerCertificate=False; Connection Timeout=30;"
+        "RegistrationdbConnection": "Server=tcp:resumebuilderbackenddbserver.database.windows.net,1433;Initial Catalog=ResumeBuilderBackend_db;Persist Security Info=False;User ID=adminuser;Password=Admin@12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "Jwt": {
         "Issuer": "your-issuer",
